--- a/a-propos.html
+++ b/a-propos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" >
     <title>À propos - Robbie Lens Photographie</title>
-    <link href="/Users/TipTop/portfolio robben lens/style.css" rel="stylesheet" >
+    <link href="style.css" rel="stylesheet" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
 <body>
     <header>
         <nav>
-            <a href="/Users/TipTop/portfolio robben lens/index.html" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/logo.png" alt="Logo Robbie Lens" >
+            <a href="index.html" class="lien-icone">
+                <img src="img/logo.png" alt="Logo Robbie Lens" >
             </a>
             <div>
-                <a href="/Users/TipTop/portfolio robben lens/index.html">Accueil</a>
-                <a href="/Users/TipTop/portfolio robben lens/a-propos.html">À propos</a>
-                <a href="/Users/TipTop/portfolio robben lens/portfolio.html">Portfolio</a>
+                <a href="index.html">Accueil</a>
+                <a href="a-propos.html">À propos</a>
+                <a href="portfolio.html">Portfolio</a>
             </div>
         </nav>
     </header>
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <div>
-                <a href="/Users/TipTop/portfolio robben lens/portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
+                <a href="portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
             </div>
         </section>
         <section>
@@ -70,15 +70,15 @@
         </section>
     </main>
     <footer>
-        <a href="/Users/TipTop/portfolio robben lens/index.html" class="lien-icone">
-            <img src="/Users/TipTop/portfolio robben lens/img/logo.png" alt="Logo Robbie Lens" >
+        <a href="index.html" class="lien-icone">
+            <img src="img/logo.png" alt="Logo Robbie Lens" >
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/twitter.png" alt="Logo Twitter" >
+                <img src="img/twitter.png" alt="Logo Twitter" >
             </a>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/instagram.png" alt="Logo Instagram" >
+                <img src="img/instagram.png" alt="Logo Instagram" >
             </a>
         </div>
     </footer>
