--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" >
     <title>Portfolio - Robbie Lens Photographie</title>
-    <link href="/Users/TipTop/portfolio robben lens/style.css" rel="stylesheet" >
+    <link href="style.css" rel="stylesheet" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
 <body>
     <header>
         <nav>
-            <a href="/Users/TipTop/portfolio robben lens/index.html" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/logo.png" alt="Logo Robbie Lens" >
+            <a href="index.html" class="lien-icone">
+                <img src="img/logo.png" alt="Logo Robbie Lens" >
             </a>
             <div>
-                <a href="/Users/TipTop/portfolio robben lens/index.html">Accueil</a>
-                <a href="/Users/TipTop/portfolio robben lens/a-propos (1).html">À propos</a>
-                <a href="/Users/TipTop/portfolio robben lens/portfolio (1).html">Portfolio</a>
+                <a href="index.html">Accueil</a>
+                <a href="a-propos.html">À propos</a>
+                <a href="portfolio.html">Portfolio</a>
             </div>
         </nav>
     </header>
@@ -30,67 +30,67 @@
         <section class="portfolio-section-photos">
             <h2>Paysages</h2>
             <div class="grid-paysages">
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage1.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage1.jpg" alt="Mont Aoraki - Nouvelle-Zélande" >
+                <a href="img/paysage1.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage1.jpg" alt="Mont Aoraki - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage2.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage2.jpg" alt="Parc National d’Abel Tasman - Nouvelle-Zélande" >
+                <a href="img/paysage2.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage2.jpg" alt="Parc National d’Abel Tasman - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage3.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage3.jpg" alt="Lac Rotorua - Nouvelle-Zélande" >
+                <a href="img/paysage3.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage3.jpg" alt="Lac Rotorua - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage4.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage4.jpg" alt="Lac Wanaka - Nouvelle-Zélande" >
+                <a href="img/paysage4.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage4.jpg" alt="Lac Wanaka - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage5.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage5.jpg" alt="Mont Taranaki - Nouvelle-Zélande" >
+                <a href="img/paysage5.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage5.jpg" alt="Mont Taranaki - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage6.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage6.jpg" alt="Milford Sound - Nouvelle-Zélande" >
+                <a href="img/paysage6.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage6.jpg" alt="Milford Sound - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage7.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage7.jpg" alt="Twelve Apostle - Australie" >
+                <a href="img/paysage7.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage7.jpg" alt="Twelve Apostle - Australie" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/paysage8.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage8.jpg" alt="Wai-O-Tapu - Nouvelle-Zélande" >
+                <a href="img/paysage8.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage8.jpg" alt="Wai-O-Tapu - Nouvelle-Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTo/portfolio robben lens/img/paysage9.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/paysage9.jpg" alt="Mont Cook - Nouvelle Zélande" >
+                <a href="img/paysage9.jpg" class="lien-conteneur-photo">
+                    <img src="img/paysage9.jpg" alt="Mont Cook - Nouvelle Zélande" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
             </div>
             <h2>Portraits</h2>
             <div class="grid-portraits">
-                <a href="/Users/TipTop/portfolio robben lens/img/portrait1.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/portrait1.jpg" alt="Portrait jeune femme 1" >
+                <a href="img/portrait1.jpg" class="lien-conteneur-photo">
+                    <img src="img/portrait1.jpg" alt="Portrait jeune femme 1" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/portrait2.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/portrait2.jpg" alt="Portrait jeune femme 2" >
+                <a href="img/portrait2.jpg" class="lien-conteneur-photo">
+                    <img src="img/portrait2.jpg" alt="Portrait jeune femme 2" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/portrait3.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/portrait3.jpg" alt="Portrait jeune homme 3" >
+                <a href="img/portrait3.jpg" class="lien-conteneur-photo">
+                    <img src="img/portrait3.jpg" alt="Portrait jeune homme 3" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/portrait4.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/portrait4.jpg" alt="Portrait jeune femme 4" >
+                <a href="img/portrait4.jpg" class="lien-conteneur-photo">
+                    <img src="img/portrait4.jpg" alt="Portrait jeune femme 4" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/portrait5.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/portrait5.jpg" alt="Portrait jeune femme 5" >
+                <a href="img/portrait5.jpg" class="lien-conteneur-photo">
+                    <img src="img/portrait5.jpg" alt="Portrait jeune femme 5" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
-                <a href="/Users/TipTop/portfolio robben lens/img/portrait6.jpg" class="lien-conteneur-photo">
-                    <img src="/Users/TipTop/portfolio robben lens/img/portrait6.jpg" alt="Portrait jeune femme 6" >
+                <a href="img/portrait6.jpg" class="lien-conteneur-photo">
+                    <img src="img/portrait6.jpg" alt="Portrait jeune femme 6" >
                     <div class="photo-hover">Voir la photo</div>
                 </a>
 
@@ -98,15 +98,15 @@
         </section>
     </main>
     <footer>
-        <a href="/Users/TipTop/portfolio robben lens/index.html" class="lien-icone">
-            <img src="/Users/TipTop/portfolio robben lens/img/logo.png" alt="Logo Robbie Lens" >
+        <a href="index.html" class="lien-icone">
+            <img src="img/logo.png" alt="Logo Robbie Lens" >
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/twitter.png" alt="Logo Twitter" >
+                <img src="img/twitter.png" alt="Logo Twitter" >
             </a>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/instagram.png" alt="Logo Instagram" >
+                <img src="img/instagram.png" alt="Logo Instagram" >
             </a>
         </div>
     </footer>
