--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" >
     <title>Accueil - Robbie Lens Photographie</title>
-    <link href="/Users/TipTop/portfolio robben lens/style.css" rel="stylesheet" >
+    <link href="style.css" rel="stylesheet" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
 <body>
     <header>
         <nav>
-            <a href="/Users/TipTop/portfolio robben lens/index.html" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/logo.png" alt="Logo Robbie Lens" >
+            <a href="index.html" class="lien-icone">
+                <img src="img/logo.png" alt="Logo Robbie Lens" >
             </a>
             <div>
-                <a href="/Users/TipTop/portfolio robben lens/index.html">Accueil</a>
-                <a href="/Users/TipTop/portfolio robben lens/a-propos.html">À propos</a>
-                <a href="/Users/TipTop/portfolio robben lens/portfolio.html">Portfolio</a>
+                <a href="index.html">Accueil</a>
+                <a href="a-propos.html">À propos</a>
+                <a href="portfolio.html">Portfolio</a>
             </div>
         </nav>
     </header>
@@ -34,19 +34,19 @@
                 </p>
                 <a href="#contact" class="cta">UN PROJET ? ÉCRIVEZ-MOI</a>
             </div>
-            <img src="/Users/TipTop/portfolio robben lens/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
+            <img src="img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
         </section>
         <section class="accueil-photos">
             <h2>Mon dernier projet</h2>
             <div>
-                <img src="/Users/TipTop/portfolio robben lens/img/element-1.png" alt="Twelve apostles - Australie" >
-                <img src="/Users/TipTop/portfolio robben lens/img/element-2.png" alt="Wai-O-Tapu - Nouvelle-Zélande" >
-                <img src="/Users/TipTop/portfolio robben lens/img/element-3.png" alt="Parc National d’Abel Tasman - Nouvelle-Zélande" >
+                <img src="img/element-1.png" alt="Twelve apostles - Australie" >
+                <img src="img/element-2.png" alt="Wai-O-Tapu - Nouvelle-Zélande" >
+                <img src="img/element-3.png" alt="Parc National d’Abel Tasman - Nouvelle-Zélande" >
             </div>
             <div>
-                <img src="/Users/TipTop/portfolio robben lens/img/element-4.png" alt="Lac Rotorua - Nouvelle-Zélande" >
-                <img src="/Users/TipTop/portfolio robben lens/img/element-5.png" alt="Milford Sound - Nouvelle-Zélande" >
-                <img src="/Users/TipTop/portfolio robben lens/img/element-6.png" alt="Lac Wanaka - Nouvelle-Zélande" >
+                <img src="img/element-4.png" alt="Lac Rotorua - Nouvelle-Zélande" >
+                <img src="img/element-5.png" alt="Milford Sound - Nouvelle-Zélande" >
+                <img src="img/element-6.png" alt="Lac Wanaka - Nouvelle-Zélande" >
             </div>
         </section>
         <section id="contact">
@@ -69,15 +69,15 @@
         </section>
     </main>
     <footer>
-        <a href="/Users/TipTop/portfolio robben lens/index.html" class="lien-icone">
-            <img src="/Users/TipTop/portfolio robben lens/img/logo.png" alt="Logo Robbie Lens" >
+        <a href="index.html" class="lien-icone">
+            <img src="img/logo.png" alt="Logo Robbie Lens" >
         </a>
         <div>
             <a target="_blank" href="https://twitter.com/" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/twitter.png" alt="Logo Twitter" >
+                <img src="img/twitter.png" alt="Logo Twitter" >
             </a>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
-                <img src="/Users/TipTop/portfolio robben lens/img/instagram.png" alt="Logo Instagram" >
+                <img src="img/instagram.png" alt="Logo Instagram" >
             </a>
         </div>
     </footer>
